# KIROHACKS

./: .gitignore  README.md  TrueCost_FigmaMake_Brief.md
.kiro/hooks/: extension-auto-build.kiro.hook  python-test-on-save.kiro.hook  security-review-writes.kiro.hook  tests-after-task.kiro.hook  typescript-check-on-save.kiro.hook
.kiro/specs/truecost-engine/: .config.kiro  design.md  requirements.md  tasks.md
backend/: pyproject.toml
backend/src/: __init__.py  chatbot_handler.py  cost_layers.py  ethics_gate.py  llm_engine.py  profile_handler.py  report_builder.py  tec_engine.py  truecost_handler.py
backend/src/models/: __init__.py  base.py  chat.py  errors.py  ethics.py  product.py  profile.py  tec.py
backend/tests/: test_ethics_gate.py  test_models.py  test_profile_handler.py  test_truecost_handler.py
extension/: dashboard.html  package-lock.json  package.json  popup.html  profile.html  tsconfig.json  vite.config.ts  vitest.config.ts
extension/public/: manifest.json
extension/src/background/: background.ts
extension/src/content/: content.ts
extension/src/data/: cardDatabase.ts
extension/src/models/: chat.ts  errors.ts  index.ts  product.ts  profile.ts  tec.ts
extension/src/pages/: Dashboard.tsx  ProfileSettings.tsx  dashboardMain.tsx  profileMain.tsx
extension/src/popup/: Popup.tsx  main.tsx
extension/src/popup/components/: AlternativesPanel.tsx  ChatbotPanel.tsx  CostBreakdown.tsx  Header.tsx  MiniDashboard.tsx  MiniProfile.tsx  TECScoreCircle.tsx
infra/: app.py  cdk.json
infra/stacks/: truecost_stack.py
